# grpc-plugin-aspnetcore

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  proto_gen.cmd  service_gen.cmd
proto/: Services.proto  aspnetcore.proto
src/: gateway.sln
src/gateway/: Program.cs  Startup.cs  gateway.csproj
src/gateway/Properties/: launchSettings.json
src/plugin/: AspNetCoreGenerator.cpp  AspNetCoreGenerator.h  CMakeLists.txt  Constructs.h  aspnetcore.pb.cc  aspnetcore.pb.h  main.cpp
